# AcmeLearn

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  assessment.md  courses.json  docker-compose.yml  pytest.ini
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  main.py  pyproject.toml  test_auth_flow.py  test_unauthorized.py  test_user_flow.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_llm_metrics.py  d59f81901e57_baseline_schema.py
backend/api/: admin.py  auth.py  courses.py  profiles.py  users.py
backend/config/: tag_categories.json
backend/core/: auth.py  config.py  database.py  logging.py  user_manager.py  users.py
backend/llm/: __init__.py  callbacks.py  config.py  exceptions.py  filters.py  intent.py  schemas.py
backend/llm/agents/: __init__.py  course_recommender.py  profile_analyzer.py
backend/llm/prompts/: __init__.py  course_recommender.py  profile_analyzer.py
backend/models/: __init__.py  activity_log.py  base.py  course.py  enums.py  llm_metrics.py  recommendation.py  user.py  user_profile.py  user_profile_snapshot.py
backend/repositories/: course_repository.py  llm_metrics_repository.py  recommendation_repository.py  user_profile_repository.py  user_repository.py
backend/schemas/: admin.py  auth.py  profile.py  recommendation.py  user.py
backend/scripts/: generate_tag_categories.py  seed_courses.py  seed_demo_users.py
backend/services/: profile_service.py  recommendation_service.py
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BACKEND_IMPROVEMENTS.md  BUSINESS_REQUIREMENTS.md  CLAUDE.md  DOCKER.md  FRONTEND_ARCHITECTURE.md  PRODUCT_DATA_STRATEGY.md  (+1 more)
(+187 files in other folders)
