[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "uvicorn>=0.38.0",
    # LLM / LangChain
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "alembic>=1.17.2",
    # Logging
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
